--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -5,6 +5,8 @@ on:
     - cron: '0 0 * * *'  # Daily at midnight UTC
   workflow_dispatch:
 
+permissions: write-all
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
